Construct general layout of viewport with header, overview, nav bar and main output sections using grid layout and add fixed button to bottom right to add a new book to library with aria label.

--- a/style.css
+++ b/style.css
@@ -19,13 +19,36 @@ color: orange;
 
 }
 
-
-#output {
+#body-container {
+    width: 100vw;
+    height: 100vh;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: 160px 60px 1fr;
+}
+#header-container {
+    grid-column: 1 /3;
+    background-color: pink;
+}
+#overview-container {
+    grid-column: 3 /4;
+background-color: blue;
+}
+#output-header {
+    grid-row: 2;
+    grid-column: 1 / 4;
+background-color: purple;
+}
+
+
+#output {
+    grid-row: 3;
+    grid-column: 1 / 4;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+grid-template-rows: repeat(3, 300px);
 border: 5px solid white;
-height: 100%;
+height: auto;
 grid-gap: 40px;
 }
 .card-item {
@@ -85,4 +108,15 @@ button {
     border: 1px solid gray;
     border-radius: 5px;
 font-size: 2rem;
+}
+
+#add-new-book{
+background-color: green;
+border-radius: 50%;
+position: fixed;
+bottom: 40px;
+right: 40px;
+height: 100px;
+width: 100px;
+
 }
